logs-macos-14m-fail/latest_build/class_loader/stdout.log
Not searching for unused variables given on the command line.
-- The C compiler identification is AppleClang 17.0.0.17000013
-- The CXX compiler identification is AppleClang 17.0.0.17000013
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake: 2.8.6 (/Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/ament_cmake/cmake)
-- Found console_bridge_vendor: 1.9.1 (/Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/console_bridge_vendor/cmake)
-- Found rcpputils: 2.14.3 (/Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/rcpputils/cmake)
-- Checking to see if CXX compiler accepts flag -Wl,--version-script,"/Users/runner/work/pixi_rosdistro/pixi_rosdistro/build/class_loader/test/class_loader_hide_library_symbols__class_loader_TestPlugins1.script"
-- Checking to see if CXX compiler accepts flag -Wl,--version-script,"/Users/runner/work/pixi_rosdistro/pixi_rosdistro/build/class_loader/test/class_loader_hide_library_symbols__class_loader_TestPlugins1.script" - no
-- Found gtest sources under '/Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/src/gtest_vendor': C++ tests using 'Google Test' will be built
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: $<BUILD_INTERFACE:/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros/class_loader/include>
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'cpplint' to check C / C++ code against the Google style
-- Configured cpplint exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done (3.5s)
-- Generating done (0.1s)
-- Build files have been written to: /Users/runner/work/pixi_rosdistro/pixi_rosdistro/build/class_loader
[1/29] Building CXX object CMakeFiles/class_loader.dir/src/class_loader.cpp.o
[2/29] Building CXX object CMakeFiles/class_loader.dir/src/class_loader_core.cpp.o
[3/29] Building CXX object CMakeFiles/class_loader.dir/src/meta_object.cpp.o
[4/29] Building CXX object CMakeFiles/class_loader.dir/src/multi_library_class_loader.cpp.o
FAILED: [code=1] CMakeFiles/class_loader.dir/src/multi_library_class_loader.cpp.o 
sccache /usr/bin/c++ -DRCUTILS_ENABLE_FAULT_INJECTION -Dclass_loader_EXPORTS -I/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros/class_loader/include -isystem /Users/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/include -isystem /Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rcpputils -isystem /Users/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rcutils -O3 -DNDEBUG -std=gnu++17 -arch arm64 -fPIC -Wall -Wextra -Wpedantic -MD -MT CMakeFiles/class_loader.dir/src/multi_library_class_loader.cpp.o -MF CMakeFiles/class_loader.dir/src/multi_library_class_loader.cpp.o.d -o CMakeFiles/class_loader.dir/src/multi_library_class_loader.cpp.o -c /Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros/class_loader/src/multi_library_class_loader.cpp
In file included from /Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros/class_loader/src/multi_library_class_loader.cpp:30:
/Users/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros/class_loader/include/class_loader/multi_library_class_loader.hpp:299:19: error: cannot initialize a variable of type 'ClassLoader *' with an rvalue of type 'const ClassLoader *'
  299 |     ClassLoader * loader = getClassLoaderForLibrary(library_path);
      |                   ^        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
ninja: build stopped: subcommand failed.
